--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src="https://friconix.com/cdn/friconix-0.2404.js"> </script>
     <link rel="shortcut icon" href="twitter.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
@@ -115,6 +117,56 @@
                         </div>
                         <div class="tweet-post-button">
                             <button class="tweet-post">Tweet</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- news feed -->
+                <div class="news-feed-post">
+                    <div class="left">
+                        <img src="https://pbs.twimg.com/profile_images/1477936468496556035/BhitSnqG_400x400.jpg"
+                            alt="hackerrank profile-pic" width="50px">
+                    </div>
+                    <div class="right">
+                        <div class="right-upper">
+                            <h3>HackerRank</h3>
+                            <img src="verified.png" alt="verified" width="18px" height="18px">
+                            <span>@hackerrank &middot; 2h</span>
+                        </div>
+                        <div class="right-lower">
+                            <pre>
+If you feel like 
+    > You're not very useful individually
+    > People make jokes about you
+    > Everyone uses you and then moves on to better things
+
+    Then you're not you, you're the HTML programming language
+                        </pre>
+                        </div>
+                        <div class="actions">
+                            <div class="comment action-box">
+                                <div class="box comment-box">
+                                    <i class="fi-xnluxl-comment-wide"></i>
+                                </div>
+                                <span> 4 </span>
+                            </div> 
+                            <div class="retweet action-box">
+                                <div class="box retweet-box">
+                                    <i class="fa-solid fa-retweet"></i>
+                                </div>
+                                <span> 5 </span>
+                            </div> 
+                            <div class="like action-box">
+                                <div class="box like-box">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                                <span> 63 </span>
+                            </div> 
+                            <div class="share action-box">
+                                <div class="box share-box">
+                                    <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                                </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
