--- a/index.html
+++ b/index.html
@@ -122,56 +122,60 @@
                 </div>
 
                 <!-- news feed -->
-                <div class="news-feed-post">
-                    <div class="left">
-                        <img src="https://pbs.twimg.com/profile_images/1477936468496556035/BhitSnqG_400x400.jpg"
-                            alt="hackerrank profile-pic" width="50px">
-                    </div>
-                    <div class="right">
-                        <div class="right-upper">
-                            <h3>HackerRank</h3>
-                            <img src="verified.png" alt="verified" width="18px" height="18px">
-                            <span>@hackerrank &middot; 2h</span>
+                <div class="news-feed">
+                    <div class="news-feed-post">
+                        <div class="left">
+                            <img src="https://pbs.twimg.com/profile_images/1477936468496556035/BhitSnqG_400x400.jpg"
+                                alt="hackerrank profile-pic" width="50px">
                         </div>
-                        <div class="right-lower">
-                            <pre>
+                        <div class="right">
+                            <div class="right-upper">
+                                <h3>HackerRank</h3>
+                                <img src="verified.png" alt="verified" width="18px" height="18px">
+                                <span>@hackerrank &middot; 2h</span>
+                            </div>
+                            <div class="right-lower">
+                                <pre>
 If you feel like 
     > You're not very useful individually
     > People make jokes about you
     > Everyone uses you and then moves on to better things
 
     Then you're not you, you're the HTML programming language
-                        </pre>
-                        </div>
-                        <div class="actions">
-                            <div class="comment action-box">
-                                <div class="box comment-box">
-                                    <i class="fi-xnluxl-comment-wide"></i>
-                                </div>
-                                <span> 4 </span>
-                            </div> 
-                            <div class="retweet action-box">
-                                <div class="box retweet-box">
-                                    <i class="fa-solid fa-retweet"></i>
-                                </div>
-                                <span> 5 </span>
-                            </div> 
-                            <div class="like action-box">
-                                <div class="box like-box">
-                                    <i class="fa-regular fa-heart"></i>
-                                </div>
-                                <span> 63 </span>
-                            </div> 
-                            <div class="share action-box">
-                                <div class="box share-box">
-                                    <i class="fa-solid fa-arrow-up-from-bracket"></i>
-                                </div>
-                            </div> 
+                            </pre>
+                            </div>
+                            <div class="actions">
+                                <div class="comment action-box">
+                                    <div class="box comment-box">
+                                        <i class="fi-xnluxl-comment-wide"></i>
+                                    </div>
+                                    <span> 4 </span>
+                                </div> 
+                                <div class="retweet action-box">
+                                    <div class="box retweet-box">
+                                        <i class="fa-solid fa-retweet"></i>
+                                    </div>
+                                    <span> 5 </span>
+                                </div> 
+                                <div class="like action-box">
+                                    <div class="box like-box">
+                                        <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                    <span> 63 </span>
+                                </div> 
+                                <div class="share action-box">
+                                    <div class="box share-box">
+                                        <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                                    </div>
+                                </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <aside class="sticky"></aside>
+                <aside class="sticky">
+                    
+                </aside>
             </div>
         </main>
     </div>
