--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                             <i class="fi-cnluxl-ellipsis"></i>
                             <p class="capsule-text">More</p>
                         </div>
-                        <button class="tweet-button">Tweet</button>
+
+                        <button class="tweet-button-text">
+                        Tweet
+                        </button>
+                        <button class="tweet-button-icon"><svg viewBox="0 0 24 24" aria-hidden="true" class="tweet-post-svg r-jwli3a"><g><path d="M23 3c-6.62-.1-10.38 2.421-13.05 6.03C7.29 12.61 6 17.331 6 22h2c0-1.007.07-2.012.19-3H12c4.1 0 7.48-3.082 7.94-7.054C22.79 10.147 23.17 6.359 23 3zm-7 8h-1.5v2H16c.63-.016 1.2-.08 1.72-.188C16.95 15.24 14.68 17 12 17H8.55c.57-2.512 1.57-4.851 3-6.78 2.16-2.912 5.29-4.911 9.45-5.187C20.95 8.079 19.9 11 16 11zM4 9V6H1V4h3V1h2v3h3v2H6v3H4z"></path></g></svg></button>
                     </div>
                 </nav>
                 <div class="user">
@@ -72,9 +76,7 @@
                 </div>
             </div>
         </header>
-
         <!-- main container -->
-
         <main>
             <div class="main-header">
                 <div class="heading-home">
@@ -129,12 +131,16 @@
                                 alt="hackerrank profile-pic" width="50px">
                         </div>
                         <div class="right">
-                            <div class="right-upper">
-                                <h3>HackerRank</h3>
-                                <img src="verified.png" alt="verified" width="18px" height="18px">
-                                <span>@hackerrank &middot; 2h</span>
+                            <div class="right-upper-main">
+
+                                <div class="right-upper">
+                                    <h3>HackerRank</h3>
+                                    <img src="verified.png" alt="verified" width="18px" height="18px">
+                                    <span>@hackerrank &middot; 2h</span>
+                                </div>
+                                
                             </div>
-                            <div class="right-lower">
+                                <div class="right-lower">
                                 <pre>
 If you feel like 
     > You're not very useful individually
@@ -150,31 +156,79 @@ If you feel like
                                         <i class="fi-xnluxl-comment-wide"></i>
                                     </div>
                                     <span> 4 </span>
-                                </div> 
+                                </div>
                                 <div class="retweet action-box">
                                     <div class="box retweet-box">
                                         <i class="fa-solid fa-retweet"></i>
                                     </div>
                                     <span> 5 </span>
-                                </div> 
+                                </div>
                                 <div class="like action-box">
                                     <div class="box like-box">
                                         <i class="fa-regular fa-heart"></i>
                                     </div>
                                     <span> 63 </span>
-                                </div> 
+                                </div>
                                 <div class="share action-box">
                                     <div class="box share-box">
                                         <i class="fa-solid fa-arrow-up-from-bracket"></i>
                                     </div>
-                                </div> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-feed-post2">
+                        <div class="left">
+                            <img src="profile.jpg" alt="hackerrank profile-pic" width="50px">
+                        </div>
+                        <div class="right">
+                            <div class="right-upper-main">
+                                <div class="right-upper">
+                                    <h3>Julius Rock</h3>
+                                    <img src="verified.png" alt="verified" width="18px" height="18px">
+                                    <span>@juliousrock &middot; 2021 Jan 31</span>
+                                </div>
+                                <div class="left-upper">
+                                    <div class="ellipsis-3"><i class="fa-solid fa-ellipsis"></i></div>
+                                </div>
+                            </div>
+                            <div class="right-lower">
+                                <p class="post2-caption">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, autem?
+                                </p>
+                                <img src="bg.jpg" alt="scene" width="500px" class="post2-bg">
+                            </div>
+                            <div class="actions">
+                                <div class="comment action-box">
+                                    <div class="box comment-box">
+                                        <i class="fi-xnluxl-comment-wide"></i>
+                                    </div>
+                                    <span> 457 </span>
+                                </div>
+                                <div class="retweet action-box">
+                                    <div class="box retweet-box">
+                                        <i class="fa-solid fa-retweet"></i>
+                                    </div>
+                                    <span> 987 </span>
+                                </div>
+                                <div class="like action-box">
+                                    <div class="box like-box">
+                                        <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                    <span> 10k </span>
+                                </div>
+                                <div class="share action-box">
+                                    <div class="box share-box">
+                                        <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <aside class="sticky">
-                    
+
                 </aside>
             </div>
         </main>
