--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="twitter.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Home / Twitter</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
